# diabetes-classifier

./: .gitignore  LICENSE  README.md  app.py  classify.py  pyproject.toml  requirements.txt
classifiers/: classifiers.pickle  classifiers.py  classify.py
classifiers/create_classifiers/: classifiers.py
src/: classify.py
src/classifiers/: classifiers.py  data.csv  dtc.pickle  mlpc.pickle  ptc.pickle
static/js/: script.js
static/styles/: style.css
templates/: index.html
